<resources>
    <string name="app_name">知视</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>

    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="custom_name">源名称</string>
    <string name="input_custom_name">请输入源名称</string>
    <string name="custom_url">源地址</string>
    <string name="input_custom_url">请输入源地址</string>

    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>

    <string name="message_setting_comeback">The user comes back from the settings page.</string>
    <string name="message_permission_always_failed">Please give us permission in the settings:\n\n%1$s</string>
    <string name="title_dialog">提示</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>

    <string name="about_author">作者:Eng\t\t(gc4868142@gmail.com)</string>
    <string name="about_project">项目简介:\n知视,一个纯粹的影音娱乐App。\n视频资源来自于互联网收集，如有侵权，请联系作者。如果你喜欢，可以捐赠我，你的支持就是我的动力，欢迎email。</string>
    <string name="about_award">请作者吃糖(￣▽￣)</string>
</resources>
