<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/add">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#bbbbbb"
                android:layout_marginTop="12dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:background="@color/white"
                android:paddingLeft="12dp"
                android:paddingRight="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_name"
                    android:textSize="13sp"
                    android:textColor="#888888"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_custom_name"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:inputType="text"
                    app:met_underlineColor="@color/tab_bar_color"
                    app:met_primaryColor="@color/colorAccent"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_url"
                    android:textSize="13sp"
                    android:textColor="#888888"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_custom_url"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:inputType="textMultiLine"
                    app:met_underlineColor="@color/tab_bar_color"
                    app:met_primaryColor="@color/colorAccent"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#bbbbbb"/>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="完成"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_defult_button_bg"
                android:layout_margin="25dp"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
